# blue-screen-what-happen

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  ai_analysis_full.txt  ai_analysis_result.txt  pyproject.toml  requirements.txt
bsod_analyzer/: __init__.py
bsod_analyzer/ai/: analyzer.py  prompts.py  providers.py
bsod_analyzer/cli/: __init__.py  main.py
bsod_analyzer/core/: __init__.py  analyzer.py  bugcheck_kb.py  driver_detector.py  kernel_dump_parser.py  pagedump_parser.py  parser.py
bsod_analyzer/database/: __init__.py  manager.py  models.py
bsod_analyzer/knowledge/: known_bad_drivers.json
bsod_analyzer/utils/: config.py  formatters.py
tests/: __init__.py
